Solve layout issues in popup

--- a/app/styles/popup.css
+++ b/app/styles/popup.css
@@ -33,3 +33,11 @@ input.plant-time {
 .active-tree {
     width: 13em;
 }
+
+.woodlot-view {
+    margin-top: 1em;
+}
+
+.tree {
+    margin-right: 0.1em;
+}
